@@ -1,4 +1,4 @@
 /* This string is written to the output primary header as CAL_VER. */
 
-# define WF3_CAL_VER "3.3(22-Jan-2016)"
+# define WF3_CAL_VER "3.3(28-Jan-2016)"
 # define WF3_CAL_VER_NUM "3.3"
